# FreeWhisper

./: .gitignore  LICENSE  README.md  start.bat  start_backend.bat
backend/: main.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: main.js  styles.css
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  main.rs
